 * Added Drawable::BuildTableauPalette(size), which is now the default palette.
 * Added Drawable::ConvertFromRGBIntoHSV
 * Added FittingTest::Lilliefors, BestModelLilliefors
 * Deprecated FittingTest::BestModelKolmogorov(Sample, DistributionFactoryCollection, TestResult), use BestModelLilliefors
 * Deprecated FittingTest::Kolmogorov(Sample, DistributionFactory, TestResult, level), use Lilliefors

=== Documentation ===
 * Sphinx-gallery used to render examples

==== API documentation ====
 * Clarified SobolIndicesExperiment page, notations now consistent with SobolIndicesAlgorithm page
 * Clarified SobolIndicesAlgorithm and (Saltellli|Martinez|MauntzKucherenko|Jansen)SensitivityAlgorithm pages, corrected formulas
 * Documented how to turn warnings off or write them on a file

=== Python module ===
 * Renamed Viewer *_kwargs arguments to *_kw (matplotlib convention)
 * Add ProcessSample Field accessors

=== Miscellaneous ===
 * Require C99/C++11 support
 * Do not compute Lagrange multipliers by default during an optimization
 * Add ResourceMap::FindKeys
 * Allow computeLogPDF methods to output values lower than SpecFunc::LogMinScalar

=== Bug fixes ===
 * #1001 (Add method SobolSimulationResult::draw)
 * #1259 (The diagonal of a scatter plot matrix should have the histograms)
 * #1267 (Some CSV files cannot be imported)
 * #1377 (The `setKnownParameter` method is not compatible with `buildEstimator`)
 * #1407 (GeneralLinearModelAlgorithm mishandles user-specified scale parameter when normalize is True)
 * #1415 (The BuildDistribution static method should not use the KS-test)
 * #1421 (UserDefinedStationaryCovarianceModel doc suggests input dimension can be >1)
 * #1436 (The style of the curves is unpleasing to my eyes)
 * #1447 (Highly inaccurate result in reliability model when using subset of RandomVector)
 * #1465 (The Sample constructor based on a list and an integer should not exist)
 * #1470 (setNbModes is sometimes ignored)
 * #1474 (optimization defaults)