@@ -25,6 +25,7 @@
 #include "openturns/HistogramFactory.hxx"
 #include "openturns/Curve.hxx"
 #include "openturns/Cloud.hxx"
+#include "openturns/SpecFunc.hxx"
 
 BEGIN_NAMESPACE_OPENTURNS
 
@@ -35,12 +36,6 @@ static const Factory<MetaModelValidation> Factory_MetaModelValidation;
 /* Default constructor */
 MetaModelValidation::MetaModelValidation()
   : PersistentObject()
-  , inputSample_()
-  , outputSample_()
-  , metaModel_()
-  , isInitialized_(false)
-  , residual_()
-  , q2_()
 {
   // Nothing to do
 }
@@ -53,25 +48,16 @@ MetaModelValidation::MetaModelValidation(const Sample & inputSample,
   , inputSample_(inputSample)
   , outputSample_(outputSample)
   , metaModel_(metaModel)
-  , isInitialized_(false)
-  , residual_()
-  , q2_()
 {
   if (inputSample_.getSize() != outputSample_.getSize())
-    throw InvalidArgumentException(HERE) << "Input & output samples have different size."
-                                         << " Input size = " << inputSample_.getSize()
-                                         << ", output size = " << outputSample_.getSize();
-  if (outputSample_.getDimension() != 1)
-    throw InvalidArgumentException(HERE) << "Output sample should be of dimension 1";
-
+    throw InvalidArgumentException(HERE) << "Input sample size (" << inputSample_.getSize() << ")"
+                                         << " should match output sample size (" << outputSample_.getSize() << ")";
   if (inputSample_.getDimension() != metaModel_.getInputDimension())
-    throw InvalidArgumentException(HERE) << "Input sample have different size from metamodel."
-                                         << " Input sample dimension = " << inputSample_.getDimension()
-                                         << ", metamodel input dimension = " << metaModel_.getInputDimension();
-
-  if (metaModel_.getOutputDimension() != 1)
-    throw InvalidArgumentException(HERE) << "Metamodel output dimension should be 1. Here, dim = " << metaModel_.getOutputDimension();
-
+    throw InvalidArgumentException(HERE) << "Metamodel input dimension ("<< metaModel_.getInputDimension() << ")"
+                                         <<  " should match input sample dimension (" << inputSample_.getDimension() << ")";
+  if (outputSample_.getDimension() != metaModel_.getOutputDimension())
+    throw InvalidArgumentException(HERE) << "Metamodel output dimension ("<< metaModel_.getOutputDimension() << ")"
+                                         <<  " should match output sample dimension (" << outputSample_.getDimension() << ")";
 }
 
 /* Virtual constructor */
@@ -100,7 +86,16 @@ void MetaModelValidation::initialize() const
   // From this, it derives also the predictive factor i.e. 1 - RSS/SS,
   // RSS = Residual Sum of Squares, SS = Sum of Squares
   residual_ = outputSample_ - metaModel_(inputSample_);
-  q2_ = 1.0 - residual_.computeRawMoment(2)[0] / outputSample_.computeCenteredMoment(2)[0];
+
+  const UnsignedInteger outputDimension = outputSample_.getDimension();
+  q2_ = Point(outputDimension, -1.0);
+  const Point residualRawMoment2(residual_.computeRawMoment(2));
+  const Point sampleVariance(outputSample_.computeCenteredMoment(2));
+  for (UnsignedInteger j = 0; j < outputDimension; ++ j)
+  {
+    if (std::abs(sampleVariance[j]) > SpecFunc::ScalarEpsilon)
+      q2_[j] = 1.0 - residualRawMoment2[j] / sampleVariance[j];
+  }
   isInitialized_ = true;
 }
 
@@ -114,7 +109,7 @@ Sample MetaModelValidation::getOutputSample() const
   return outputSample_;
 }
 
-Scalar MetaModelValidation::computePredictivityFactor() const
+Point MetaModelValidation::computePredictivityFactor() const
 {
   if (!isInitialized_) initialize();
   return q2_;
@@ -139,20 +134,35 @@ Distribution MetaModelValidation::getResidualDistribution(const Bool smooth) con
 }
 
 /* Draw model vs metamodel validation graph */
-Graph MetaModelValidation::drawValidation() const
+GridLayout MetaModelValidation::drawValidation() const
 {
   // Build the first drawable
+  const UnsignedInteger outputDimension = outputSample_.getDimension();
   const Sample yhat = metaModel_(inputSample_);
-  Curve curve(outputSample_, outputSample_);
-  curve.setColor("blue");
-  Cloud cloud(outputSample_, yhat);
-  // set color
-  cloud.setColor("red");
-  Graph graph(OSS() << "Metamodel validation - Q2 = " << q2_ * 100 << " %", "model", "metamodel", true);
-  // Add drawables
-  graph.add(curve);
-  graph.add(cloud);
-  return graph;
+  Point minS(outputSample_.getMin());
+  Point maxS(outputSample_.getMax());
+  GridLayout grid(1, outputDimension);
+  for (UnsignedInteger j = 0; j < outputDimension; ++ j)
+  {
+    Graph graph("", OSS() << "model " << j, j == 0 ? "metamodel" : "", true);
+
+    // diagonal
+    Sample diagonalPoints(2, 2);
+    diagonalPoints[0] = Point(2, minS[j]);
+    diagonalPoints[1] = Point(2, maxS[j]);
+    Curve diagonal(diagonalPoints);
+    diagonal.setColor("red");
+    graph.add(diagonal);
+
+    // points
+    Cloud cloud(outputSample_.getMarginal(j), yhat.getMarginal(j));
+    cloud.setColor("blue");
+    graph.add(cloud);
+
+    grid.setGraph(0, j, graph);
+  }
+  grid.setTitle(OSS() << "Metamodel validation - n = " << outputSample_.getSize());
+  return grid;
 }
 
 /* Method save() stores the object through the StorageManager */
