@@ -3,9 +3,6 @@
 
 Refer to :ref:`cross_validation`.
 
-Available constructor:
-    MetaModelValidation(*inputValidationSample, outputValidationSample, metaModel*)
-
 Parameters
 ----------
 inputValidationSample, outputValidationSample : 2-d sequence of float
@@ -78,7 +75,7 @@ outputSample : :class:`~openturns.Sample`
 
 Returns
 -------
-q2 : float
+q2 : :class:`~openturns.Point`
     The predictivity factor
 
 Notes
@@ -134,5 +131,5 @@ The residual distribution is built thanks to :class:`~openturns.KernelSmoothing`
 
 Returns
 -------
-graph : :class:`~openturns.Graph`
+graph : :class:`~openturns.GridLayout`
     The visual validation graph."
